# Curso_Agentes_CUGDL

./: .gitignore  AGENTS.md  GUIA_AGENTE.md  README.md  agent_deep.py  agent_full.py  cerebro_en_el_frasco.py  conftest.py  deep_soporte.py  main.py  mcp_config.json  mcp_soporte.py  memoria.md  opencode.json  pyproject.toml  servidor_mcp.py  sub_agentes.py
__marimo__/: agent_deep.html  agent_deep.ipynb  agent_full.html  agent_full.ipynb  cerebro_en_el_frasco.html  cerebro_en_el_frasco.ipynb
docs/superpowers/plans/: 2026-07-01-agent-deep.md  2026-07-04-mcp-course-material.md
docs/superpowers/specs/: 2026-07-01-agent-deep-deepagents-design.md  2026-07-04-mcp-course-material-design.md
skills/evaluar/: SKILL.md
skills/formato-apa/: SKILL.MD
skills/resumen-ejecutivo/: SKILL.md
subagentes/: investigador.md
tests/: test_deep_soporte.py  test_mcp_soporte.py
