[project]
name = "agente01"
version = "0.2.0"
description = "Agente IA con memoria permanente en Windows - LangChain harness"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=0.3.0",
    "langsmith>=0.3.45,<0.9.0",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "marimo[mcp]>=0.23.11",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pylatexenc>=2.10",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "ty>=0.0.55",
    "websockets>=15.0.1",
]
