[project]
name = "agente01"
version = "0.2.0"
description = "Agente IA con memoria permanente en Windows - LangChain harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core",
    "langsmith",
    "langchain-nvidia-ai-endpoints",
    "langgraph-checkpoint-sqlite",
    "marimo[mcp]",
    "nbconvert",
    "nbformat",
    "numpy",
    "pylatexenc",
    "pytest",
    "python-dotenv",
    "rich",
    "tavily-python",
    "ty",
    "websockets",
    "docling",
    "deepagents",
    "openai",
    "firecrawl",
    "markitdown[all]",
    "duckdb>=1.5.4",
    "sqlglot>=30.12.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "ruff>=0.15.20",
    "python-lsp-server>=1.14.0",
]
